# Waldo

./: .gitignore  IMAGEGEN_ASSETS.md  LICENSE  README.md  example.md  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json  vite.config.ts
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/models/: app.py  app.spec
src-tauri/src/: lib.rs  main.rs
src/components/: Buttton.tsx  Checkbox.tsx  Image.tsx  NumberInput.tsx  TextInput.tsx
src/hooks/: useMain.ts  useSettings.ts
src/layout/: AppShell.tsx  Layout.tsx  Titlebar.tsx
src/routes/: About.tsx  Diagnostics.tsx  Downloads.tsx  Hello.tsx  History.tsx  Home.tsx  Loading.tsx  Main.tsx  NotFound.tsx  Result.tsx  ResultsNotFound.tsx  ResultsReview.tsx  Routes.tsx  SearchNew.tsx  SearchProcessing.tsx  Settings.tsx
src/services/: inference.ts
src/state/: searchState.ts
src/styles/: App.css  Theme.css  Titlebar.css  Utilities.css
src/types/: app.ts
src/utils/: appRecords.ts  image.ts  settings.ts  store.ts
